--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "moviedb",
   "version": "0.1.0",
-  "proxy": "https://www.themoviedb.org/",
+  "proxy": "https://image.tmdb.org/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "fast-average-color": "^7.1.0",
     "get-average-color": "^0.0.6",
     "react": "^18.1.0",
@@ -25,7 +26,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
